[package]
name = "deno_core_live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.189.0"
tokio = {version = "1.28.2", features = ["full"]}
zstd = "0.12.3+zstd.1.5.2"
lazy_static = "1.4.0"

[build-dependencies]
deno_core = "0.189.0"
zstd = "0.12.3+zstd.1.5.2"
